{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 13,
  "lineage": "ac9c9e95-d0e7-9bd6-1baa-ae2f623c1043",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07300c541e0331c94",
            "arn": "arn:aws:ec2:eu-north-1:490004630244:instance/i-0d162ddfff8451454",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d162ddfff8451454",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dove-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-039fc6c71e024cf76"
              }
            ],
            "primary_network_interface_id": "eni-039fc6c71e024cf76",
            "private_dns": "ip-172-31-17-242.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.242",
            "public_dns": "ec2-13-60-79-215.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.79.215",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e030ce2c5580b11e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "dove-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c833726436938f43",
            "tags": {
              "Name": "Dove INSTANCE",
              "Project": "Dove"
            },
            "tags_all": {
              "Name": "Dove INSTANCE",
              "Project": "Dove"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8930045cadf999a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490004630244",
            "id": "i-0d162ddfff8451454",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.dove_key",
            "aws_security_group.dove_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:490004630244:security-group/sg-0c8930045cadf999a",
            "description": "Security group for Dove instance",
            "egress": [],
            "id": "sg-0c8930045cadf999a",
            "ingress": [],
            "name": "dove-sg",
            "name_prefix": "",
            "owner_id": "490004630244",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dove-sg"
            },
            "tags_all": {
              "Name": "dove-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05605680ab3032bd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490004630244",
            "id": "sg-0c8930045cadf999a",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:490004630244:security-group-rule/sgr-0a015eaa309547d5c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a015eaa309547d5c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0c8930045cadf999a",
            "security_group_rule_id": "sgr-0a015eaa309547d5c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490004630244",
            "id": "sgr-0a015eaa309547d5c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.dove_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:490004630244:security-group-rule/sgr-031daf749dd7b2444",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-031daf749dd7b2444",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0c8930045cadf999a",
            "security_group_rule_id": "sgr-031daf749dd7b2444",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490004630244",
            "id": "sgr-031daf749dd7b2444",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.dove_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:490004630244:security-group-rule/sgr-0b2978f5853401f58",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b2978f5853401f58",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0c8930045cadf999a",
            "security_group_rule_id": "sgr-0b2978f5853401f58",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490004630244",
            "id": "sgr-0b2978f5853401f58",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.dove_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:490004630244:security-group-rule/sgr-0350d5866f7aaf246",
            "cidr_ipv4": "197.43.48.223/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0350d5866f7aaf246",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0c8930045cadf999a",
            "security_group_rule_id": "sgr-0350d5866f7aaf246",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490004630244",
            "id": "sgr-0350d5866f7aaf246",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.dove_sg"
          ]
        }
      ]
    }
  ]
}